# Lott-EXT

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  build.sh  diffAll.sh  setup.sh  stageAll.sh  toMain.sh
test/: CMakeLists.txt  main.cpp
